kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cb-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - path: /graphql
            pathType: Exact
            backend:
              service:
                name: graphql-api-service
                port:
                  number: 80
          - path: /(.*)
            pathType: Exact
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
